tests/machine/x/ocaml/dataset_sort_take_limit.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/dataset_sort_take_limit.ml", line 36, characters 44-48:
36 | let products = [[("name","Laptop");("price",1500)];[("name","Smartphone");("price",900)];[("name","Tablet");("price",600)];[("name","Monitor");("price",300)];[("name","Keyboard");("price",100)];[("name","Mouse");("price",50)];[("name","Headphones");("price",200)]]
                                                 ^^^^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 36):
  34 | let string_slice s i j = String.sub s i (j - i)
  35 | 
  36 | let products = [[("name","Laptop");("price",1500)];[("name","Smartphone");("price",900)];[("name","Tablet");("price",600)];[("name","Monitor");("price",300)];[("name","Keyboard");("price",100)];[("name","Mouse");("price",50)];[("name","Headphones");("price",200)]]
  37 | let expensive = (let __res0 = ref [] in
  38 |   List.iter (fun p ->
